fix letter-spacing on counter__minutes

--- a/css/style.scss
+++ b/css/style.scss
@@ -364,6 +364,7 @@ input {
 		margin-top: 0.5em;
 		font-size: 0.625em;
 		line-height: 15px;
+		letter-spacing: 1.2px;
 	}
 	.graph__chart {
 		padding: 1.5em 2em;
